log
Tue 07 May 2024 03:13:59 PM UTC: 
 tests:  1|8
total_score: 0/70
68e1305
Tue 07 May 2024 03:16:49 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
90d2c17
Tue 07 May 2024 03:20:57 PM UTC: 
 treemap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   56 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d734f43
Tue 07 May 2024 03:22:44 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:66:20: error: unused variable ‘new’ [-Werror=unused-variable]
   66 |         TreeNode * new = createTreeNode(key, value);
      |                    ^~~
treemap.c:56:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   56 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
da66fb1
